--- a/h/templates/viewer.html
+++ b/h/templates/viewer.html
@@ -3,7 +3,7 @@
   <li ng-show="!!search.query"
       ><span ng-pluralize
              count="results"
-             when="{'0': 'No results.',
+             when="{'0': 'No results for “{{search.query}}”.',
                     'one': 'Found one result.',
                     'other': 'Found {} results.'}"></span>
       <a href="" ng-click="clearSelection()">Clear search</a>.</li>
