Optimize reply count updates
Rather than traversing all the descendants at every digest of every
level of every thread, propagate updates from leaf nodes to parents
by giving each thread access to its parent thread controller. Digests
are only ever performed at the top level and are debounced so that
during progressive rendering of threads the number of digests is
greatly reduced. Some adhoc experimentation yields a 50% reduction in
digests during thread rendering on top of the performance gain by
not traversing descendants in `messageContainer#flattenChildren` calls
on every digest.

To accomplish the debouncing, the render service now returns a cancel
function making it have the same signature as `requestAnimationFrame`.

--- a/h/templates/thread.html
+++ b/h/templates/thread.html
@@ -32,9 +32,8 @@
     <!-- Reply count -->
     <a class="reply-count small"
        href=""
-       ng-pluralize=""
-       ng-if="vm.container.children.length && !vm.container.more"
-       count="vm.container.flattenChildren().length"
+       ng-if="vm.messageCount.all > 1 && !vm.container.more"
+       ng-pluralize count="vm.messageCount.all - 1"
        when="{one: '1 reply', other: '{} replies'}" />
 
     <!-- Bottom control strip -->
