--- a/h/templates/viewer.html
+++ b/h/templates/viewer.html
@@ -1,13 +1,13 @@
 <!-- Thread view -->
-<ul class="stream-list">
-  <li ng-show="!!search.query"
+<ul class="stream-list" thread="threading.root" thread-filter="search.query">
+  <li ng-show="threadFilter.active()"
       ><span ng-pluralize
-             count="results"
+             count="vm.messageCount.filter"
              when="{'0': 'No results for “{{search.query}}”.',
                     'one': 'Found one result.',
                     'other': 'Found {} results.'}"></span>
       <a href="" ng-click="clearSelection()">Clear search</a>.</li>
-  <li ng-show="selectedAnnotations && !search.query"
+  <li ng-show="!threadFilter.active() && selectedAnnotations"
       ><span ng-pluralize
              count="selectedAnnotationsCount"
              when="{'0': 'No annotations selected',
@@ -31,13 +31,15 @@
     </span>
   </li>
   <li class="paper thread"
-      thread="child"
+      thread="child" thread-filter
       thread-collapsed="!search.query"
+      ng-hide="!shouldShowThread(child) ||
+               (threadFilter.active() && !vm.messageCount.filter)"
       ng-include="'thread.html'"
       ng-mouseenter="activate(child.message)"
       ng-mouseleave="activate()"
-      ng-repeat="child in threading.root.children
-                 | orderBy : sort.predicate : sort.reverse"
-      ng-show="shouldShowThread(child)"></li>
+      ng-repeat="child in vm.container.children
+                 | orderBy : sort.predicate : sort.reverse">
+  </li>
 </ul>
 <!-- / Thread view -->
