Display a message when the top post is unavailable

--- a/h/templates/thread.html
+++ b/h/templates/thread.html
@@ -13,6 +13,8 @@
        ng-if="vm.container.message">
   </div>
 
+  <p ng-if="!vm.container.message"><em>Annotation not available.</em></p>
+
   <footer ng-if="vm.container.message.id">
     <!-- Share -->
     <div class="share-dialog"
