--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -63,6 +63,12 @@
     width: 100%;
     margin-bottom: -1px;
     padding: .7em .7em .7em .5em;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 
     &.disable {
       i {
