Move share and reply back inside the annotation
Move the edit and delete actions back down to the bottom of the
annotation alongside the share and reply actions.

Improve the experience when searching and composing by adding a
freeze function to the thread filter so that edits can freeze their
filter in a deactivated state in order to always match the filter.
This change keeps edits visible all the time and keeps the reply
and show more counts accurate.

Make the annotation and thread markup a bit more semantic and use
this to tweak some margins now that the reply count is below the
actions.

Drop the "<nobody>" placeholder for unattributed annotations and
instead just opt not to show the username or privacy and highlight
indicators.

Change the markdown directive to use an attribute and tighten up
the collapsed thread styles.

--- a/h/static/styles/annotations.scss
+++ b/h/static/styles/annotations.scss
@@ -19,6 +19,10 @@
     }
   }
 
+  header { margin-bottom: .8em }
+  section { margin: .8em 0 }
+  footer { margin-top: .8em }
+
   .user {
     font-weight: bold;
     font-size: 1.1em;
@@ -30,10 +34,6 @@
   }
 }
 
-.annotation-actions {
-  margin-top: .4em;
-}
-
 .annotation-quote {
   @include quote;
 }
@@ -43,21 +43,39 @@
   font-size: .923em;
 }
 
-.excerpt {
-  margin-bottom: 1em;
-  position: relative;
+.icon-markdown {
+  color: $text-color;
+  line-height: 1.4;
+  margin-left: .5em;
+}
 
-  .more, .less {
-    font-size: .9em;
-    font-family: $sans-font-family;
-    font-weight: 300;
-    display: block;
-    text-align: right;
+.magicontrol {
+  margin-right: .8em;
+  color: $gray-lighter;
+
+  &.dropdown {
+    top: 4px;
+  }
+
+  .annotation:hover & {
+    color: $link-color;
   }
 }
 
-.icon-markdown {
-  color: $text-color;
-  line-height: 1.5;
-  margin-right: .5em;
+.share-dialog {
+  a {
+    float: left;
+    line-height: 1.4;
+    margin-right: .5em;
+    vertical-align: middle;
+  }
+
+  div {
+    overflow: hidden;
+  }
+
+  input {
+    padding: 0;
+    width: 100%;
+  }
 }
