--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -22,8 +22,15 @@ $threadexp-width: .6em;
 
   .reply-count {
     color: $text-color;
-    &:hover { color: $link-color-hover; }
     &:focus { outline: 0; }
+  }
+
+  &:hover .reply-count {
+    color: $link-color;
+
+    &:hover, &:focus {
+      color: $link-color-hover;
+    }
   }
 
   .thread {
