Make the quote italic to break up the card text
This was part of an earlier card refactor but was put aside until we'd
tested it with the text diffs. These have been removed for the moment
so it seems like a good time to try this style out.

--- a/h/static/styles/base.scss
+++ b/h/static/styles/base.scss
@@ -150,6 +150,7 @@ $input-border-radius: 2px;
 @mixin quote {
   color: $gray;
   font-family: $serif-font-family;
+  font-style: italic;
   padding: 0 .615em;
   border-left: 3px solid $gray-lighter;
 }
