Add spacing between child thread and replies toggle

--- a/h/static/styles/threads.scss
+++ b/h/static/styles/threads.scss
@@ -11,6 +11,10 @@ $threadexp-width: .6em;
   }
 }
 
+.thread-list {
+  margin-top: 0.5em;
+}
+
 .thread {
   cursor: pointer;
   position: relative;
