--- a/h/templates/thread.html
+++ b/h/templates/thread.html
@@ -33,7 +33,7 @@
    ></a>
 
 <!-- Replies -->
-<ul ng-hide="vm.collapsed">
+<ul class="thread-list" ng-hide="vm.collapsed">
   <li class="thread"
       deep-count="count"
       thread="child" thread-filter
